<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/color"
        android:title="@string/menuitem_color"
        android:icon="@drawable/ic_palette_white_24dp"
        app:showAsAction="ifRoom">
    </item>

    <item
        android:id="@+id/line_width"
        android:title="@string/menuitem_line_width"
        android:icon="@drawable/ic_brush_white_24dp"
        app:showAsAction="ifRoom">
    </item>

    <item
        android:id="@+id/delete_drawing"
        android:title="@string/menuitem_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        app:showAsAction="ifRoom">
    </item>

    <item
        android:id="@+id/save"
        android:title="@string/menuitem_save"
        android:icon="@drawable/ic_save_white_24dp"
        app:showAsAction="ifRoom">
    </item>

    <item
        android:id="@+id/print"
        android:title="@string/menuitem_print"
        android:icon="@drawable/ic_print_white_24dp"
        app:showAsAction="ifRoom">
    </item>
</menu>